using System;
using System.Collections.Generic;
using System.Text;

namespace Romanesco.Common.Entities
{
    public class Project
    {
    }
}
